--- a/portfolio-aditya-pachkor/index.html
+++ b/portfolio-aditya-pachkor/index.html
@@ -14,40 +14,105 @@
 
   <section>
     <h2>About Me</h2>
-    <p>I am Aditya Pachkor, a passionate and dedicated software developer...</p>
+    <p>
+      I am Aditya Pachkor from Amravati, Maharashtra. I am currently in my third year of a Bachelor of Technology (B.Tech) program in Computer Science Engineering. 
+      I have a strong passion for software development and web technologies, focusing on backend development and database management.
+      I have foundational knowledge in Python and SQL and actively work on improving my coding skills by building practical applications.
+      I enjoy tackling challenging projects that help me learn new technologies and improve problem-solving abilities.
+      I am enthusiastic about collaborating with like-minded professionals and contributing to impactful tech projects.
+    </p>
   </section>
 
   <section>
     <h2>Skills</h2>
     <ul class="skills">
-      <li>HTML5 & CSS3</li>
-      <li>JavaScript</li>
-      <li>MongoDB</li>
       <li>Python</li>
-      <li>Team Collaboration</li>
+      <li>SQL</li>
+      <li>JavaScript</li>
+      <li>HTML5 & CSS3</li>
+      <li>Flask</li>
+      <li>Bootstrap</li>
+      <li>MySQL</li>
+      <li>REST APIs</li>
+      <li>CRUD Operations</li>
+      <li>User Authentication</li>
+      <li>Git</li>
+      <li>VS Code</li>
       <li>Problem Solving</li>
       <li>Effective Communication</li>
+      <li>Team Collaboration</li>
     </ul>
   </section>
 
   <section>
     <h2>Projects</h2>
     <div class="projects">
+
       <div class="project-card">
-        <h3>Portfolio Website</h3>
-        <p>A dynamic and responsive portfolio site...</p>
-        <a href="https://dainty-mandazi-1ba848.netlify.app/">View Project</a>
+        <h3>Turf Booking Web Application</h3>
+        <p>
+          Developed using <strong>Flask</strong> and <strong>MySQL</strong>. Enables users to book box cricket and football turf slots online with user registration/login, real-time availability, and booking history.
+          Focused on backend development, database management, and API integration.
+        </p>
       </div>
+
+      <div class="project-card">
+        <h3>Job Board Website</h3>
+        <p>
+          Fully responsive job board platform with job listings, search and filter functionality.
+          Built with HTML, CSS, and JavaScript emphasizing UI/UX and frontend interactivity.
+        </p>
+      </div>
+
+      <div class="project-card">
+        <h3>Personal Portfolio Website</h3>
+        <p>
+          Showcases my skills, projects, and contact information.
+          Responsive design using Flexbox and Grid, with smooth JavaScript navigation.
+        </p>
+        
+      </div>
+
+      <div class="project-card">
+        <h3>Netflix Clone</h3>
+        <p>
+          Responsive front-end replica of Netflix’s landing page using HTML, CSS, and JavaScript.
+          Features hero section, navigation bar, and media sections with images/videos.
+          Learned layout techniques, responsive design, and styling complex components.
+        </p>
+      </div>
+
+      <div class="project-card">
+        <h3>Amazon Clone</h3>
+        <p>
+          Basic e-commerce front-end clone with product listings, search bar, and shopping cart interface.
+          Built using HTML, CSS, and JavaScript.
+          Gained experience in structuring large-scale layouts and user interaction.
+        </p>
+      </div>
+
+      <div class="project-card">
+        <h3>Flipkart Clone</h3>
+        <p>
+          Front-end clone of Flipkart’s shopping platform with product categories, banners, and responsive grid layout.
+          Built using HTML, CSS, and JavaScript.
+          Improved skills in responsive design, component reuse, and UI consistency.
+        </p>
+      </div>
+
       <div class="project-card">
         <h3>Task Manager App</h3>
-        <p>A full-stack web application...</p>
-        <a href="#">View Project</a>
+        <p>A full-stack web application for managing daily tasks with CRUD functionality and user authentication.</p>
       </div>
+
       <div class="project-card">
         <h3>Traffic Management System</h3>
-        <p>A Traffic Management System optimizes traffic flow and safety using real-time data, smart signals, and incident detection to reduce congestion...</p>
-        <a href="https://trafficmanagementsystem-adityapachkor.netlify.app/">View Project</a>
+        <p>
+          Optimizes traffic flow and safety using real-time data, smart signals, and incident detection to reduce congestion.
+        </p>
+        
       </div>
+
     </div>
   </section>
 
